[gd_scene load_steps=10 format=3 uid="uid://bcf0j5grrma4e"]

[ext_resource type="PackedScene" uid="uid://commjrcmkwfx6" path="res://Scenes/DialogBox.tscn" id="1_k04cp"]
[ext_resource type="Texture2D" uid="uid://d31imee4ppwwm" path="res://Assets/Misc/paper.png" id="2_lfb5k"]
[ext_resource type="Script" path="res://Scenes/BookBox.gd" id="2_qyhk4"]
[ext_resource type="PackedScene" uid="uid://cbgdrvdj6hp6w" path="res://Scenes/DialogLore.tscn" id="3_2xl0d"]
[ext_resource type="Texture2D" uid="uid://brx7264vfrstp" path="res://Assets/LoreImages/0.png" id="4_e70s5"]

[sub_resource type="Animation" id="Animation_6p18q"]
resource_name = "page_flip_back"

[sub_resource type="Animation" id="Animation_52skv"]
resource_name = "page_flip_forward"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.639189, 0.941176), Vector2(-0.639, 0.941)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [3, 1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Box:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.388235, 0.388235, 0.388235, 1), Color(0.388235, 0.388235, 0.388235, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [true],
"method": &"set_disabled"
}, {
"args": [false],
"method": &"set_disabled"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("RichTextLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"show_next_figure"
}]
}

[sub_resource type="Animation" id="Animation_6m5gf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Box:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.639189, 0.941176)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Box:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Box:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RichTextLabel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_he21d"]
_data = {
"RESET": SubResource("Animation_6m5gf"),
"page_flip_back": SubResource("Animation_6p18q"),
"page_flip_forward": SubResource("Animation_52skv")
}

[node name="BookBox" instance=ExtResource("1_k04cp")]
script = ExtResource("2_qyhk4")
max_figure_amount = 4
scene_text_file = "res://Dialogs/lore.json"
scene_to_go_after_end = ExtResource("3_2xl0d")

[node name="Figure" type="TextureRect" parent="." index="0"]
z_index = 1
offset_left = 168.0
offset_top = 136.0
offset_right = 1192.0
offset_bottom = 1160.0
scale = Vector2(0.460317, 0.453125)
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("4_e70s5")

[node name="Box" parent="." index="1"]
modulate = Color(1, 1, 1, 1)
z_index = 1
position = Vector2(640, 136)
scale = Vector2(0.639189, 0.941176)
texture = ExtResource("2_lfb5k")
region_rect = Rect2(0, 0, 744, 496)

[node name="Back" type="Sprite2D" parent="." index="2"]
z_index = 1
position = Vector2(640, 136)
scale = Vector2(0.639189, 0.941176)
texture = ExtResource("2_lfb5k")
centered = false

[node name="RichTextLabel" parent="." index="3"]
z_index = 2
offset_left = 682.0
offset_top = 188.0
offset_right = 1074.0
offset_bottom = 575.0

[node name="character" parent="." index="4"]
visible = false
position = Vector2(476, 336)
scale = Vector2(0.489637, 0.489637)

[node name="Panel" parent="." index="5"]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
libraries = {
"": SubResource("AnimationLibrary_he21d")
}

[connection signal="on_next_line" from="." to="." method="_on_on_next_line"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
